Fix build path, remove dist git, add .gitignore

--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AQPX</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>AQPX — Privacy-Preserving AI Orchestration for the Enterprise</title>
+    <meta name="description" content="AQPX compiles natural-language requests into policy-aware plans, executes compute-to-data, and returns auditable results with mathematical privacy." />
+    <link rel="canonical" href="https://sr55662.github.io/aqpx-site/" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sr55662.github.io/aqpx-site/" />
+    <meta property="og:title" content="AQPX — Privacy-Preserving AI Orchestration" />
+    <meta property="og:description" content="Deliver LLM-powered insights without exposing raw data. Compute-to-data, audit-ready evidence, and federated orchestration." />
+    <meta property="og:image" content="https://sr55662.github.io/aqpx-site/og-image.png" />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="AQPX — Privacy-Preserving AI Orchestration" />
+    <meta name="twitter:description" content="Compute-to-data, privacy-bounded digests, and cryptographic evidence for enterprise AI." />
+    <meta name="twitter:image" content="https://sr55662.github.io/aqpx-site/og-image.png" />
+
+    <meta name="robots" content="index,follow" />
+    <meta name="theme-color" content="#0b0f19" />
+    <link rel="icon" href="/aqpx-site/favicon.ico" />
   </head>
   <body class="bg-neutral-950">
     <div id="root"></div>
+    <!-- ✅ leave this as /src/main.jsx; Vite base handles the /aqpx-site prefix for built assets -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
